Fix release validation and search edge cases
Reject bare numbers, punctuation-only date labels, unsupported years,
and impossible AM/PM times so malformed input cannot enter saved lists.
Retain validation causes and test rejected commands, saved-file protection,
and successful recovery after correcting an input.

Normalize phrase spacing during search to match the duplicate-check rules.
Align the Apple Silicon CI artifact path and user guide with the current
JAR filename so release verification can find the generated archive.

Verify 104 JUnit tests, 20 CLI scenarios, Javadoc generation, and both
release archive variants with Java 25. All non-private production classes,
methods, and constructors have Javadoc; non-GUI line coverage is 99.2%.